# 2025-p1-sahajdeep31

./: README.md  pyproject.toml
todo/views/: routes.py
