[project]
name = "2025-p1-sahajdeep31"
version = "0.1.0"
description = ""
authors = [
    {name = "Sahajdeep Singh Narang",email = "sahajdeep3366@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

